# AICodingTest

./: .gitignore  PRD.md  README.md  TECH_STACK.md  main.py  pyproject.toml
aicodingtest.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/: config.py
app/api/: routes.py
app/models/: schemas.py
app/services/: extractor.py  parser.py  processor.py  validator.py
app/static/: app.js  style.css
app/templates/: index.html
tests/: test_api.py  test_parser.py  test_validator.py
